[package]
name = "salvum"
version = "1.0.0"
edition = "2018"

[dependencies]
atomic = "0.5.0"
chrono = "0.4.19"
colored = "2.0.0"
console = "0.14.1"
ctrlc = "3.2.0"
cursive = { version = "0.17.0-alpha.0", features = ["termion-backend"] }
dialoguer = "0.8.0"
duct = "0.13.5"
fs-utils = "1.1.4"
heck = "0.3.3"
interprocess = "1.1.1"
nix = "0.23.0"
once_cell = "1.8.0"
online = { version = "3.0.1",  default-features = false, features = ["sync"] }
openssh = "0.8.1"
rand = "0.8.4"
regex = "1.3.3"
rust-pager = { path = "lib/rust-pager" }
strcursor = "0.2.5"
tempfile = "3.2.0"
termion = { path = "lib/termion" }
users = "0.11.0"
walkdir = "2.3.2"
zeroize = "1.4.1"
binaryornot = "1.0"
